--- a/src/components/VideoScreen/VideoScreen.module.scss
+++ b/src/components/VideoScreen/VideoScreen.module.scss
@@ -21,4 +21,10 @@
     left: 20px;
     bottom: 60px;
   }
+
+  .shareButton {
+    position: absolute;
+    left: 20px;
+    bottom: 120px;
+  }
 }
