--- a/src/components/VideoChat/VideoChat.module.scss
+++ b/src/components/VideoChat/VideoChat.module.scss
@@ -1,6 +1,7 @@
 .videoChat {
     display: grid;
-    grid-template-columns: 1fr 280px;
+    grid-template-columns: 1fr 360px;
+    grid-template-rows: 100%;
     column-gap: 24px;
     height: 100vh;
     padding: 20px;
