--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,14 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+
+  --dark: #2a2a2a;
+  --dark-2: #232323;
+  --black: #1e1e1e;
+  --primary: #646cff;
+  --primary-darker: #525BFF;
+  --attention: #b23232;
+  --attention-darker: #a42f2f;
 }
 
 * {
@@ -30,6 +38,7 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--dark);
 }
 
 h1 {
@@ -39,33 +48,14 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  padding: 12px 16px;
+  font-weight: 400;
+  background-color: var(--primary);
   cursor: pointer;
-  transition: border-color 0.25s;
-  border-color: #646cff;
+  outline: unset;
+  color: white;
+  transition: 0.2s all ease;
 }
 button:hover {
-  border-color: #212cf8;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  background-color: var(--primary-darker);
 }
