added end of call and turn on/off web cam methods

--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ button {
   background-color: var(--primary);
   cursor: pointer;
   outline: unset;
+  border: unset;
   color: white;
   transition: 0.2s all ease;
 }
