--- a/src/components/VideoScreen/VideoScreen.module.scss
+++ b/src/components/VideoScreen/VideoScreen.module.scss
@@ -2,18 +2,31 @@
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  align-items: center;
 
-  .localVideo {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    height: 30%;
-    z-index: 1;
-  }
-
-  .remoteVideo {
+  .videos {
     width: 100%;
-    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    column-gap: 24px;
+    row-gap: 24px;
+    align-items: center;
+
+    .video {
+      border-radius: 16px;
+      width: 100%;
+      cursor: pointer;
+
+      &.fullScreen {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 
   .callControls {
